<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rv_message_recieved"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/tv_message_img"
        android:background="@drawable/rounded_rectangle_white"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="@drawable/rounded_rectangle_white"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_message_img"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tv_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rv_message_recieved"
        android:layout_marginTop="0dp"
        android:paddingHorizontal="20dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_message"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</android.support.constraint.ConstraintLayout>